[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/base_terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level1.gd" type="Script" id=3]

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="Terrain" type="Node2D" parent="."]

[node name="TileMap" parent="Terrain" instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 176, 288 )

[node name="GreenLightLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 192.0
margin_right = 107.0
margin_bottom = 206.0
text = "Green light:"

[node name="YellowLightLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 208.0
margin_right = 109.0
margin_bottom = 222.0
text = "Yellow light:"

[node name="RedLightLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 224.0
margin_right = 92.0
margin_bottom = 238.0
text = "Red light:"
